TAG: entrezgeneload-3-5-1-21
TAG: entrezgeneload-3-5-1-20
DATE: 12/18/2006
STAFF: lec
CHANGES:
1) fix deleteIDs.csh (duplicate & obsolete markers)
2) removed deleteObsolete.csh (incorporated into deleteIDs.csh)
3) updateNomen.csh (removed duplicate logic; incorporated into deleteIDs.csh)

TAG: entrezgeneload-3-5-1-16
DATE: 11/21/2006
STAFF: lec
CHANGES:
1) file format change

TAG: entrezgeneload-3-5-1-15
TAG: entrezgeneload-3-5-1-14
DATE: 10/26/2006
STAFF: lec
CHANGES:
1) TR 7508; chimp/dog

TAG: entrezgeneload-3-5-1-13
TAG: entrezgeneload-3-5-1-12
TAG: entrezgeneload-3-5-1-11
DATE: 10/19/2006
STAFF: lec
CHANGES:
1) TR 7894; mgiconfig
2) TR 7508; chimp/dog

TAG: entrezgeneload-3-5-1-10
DATE: 10/17/2006
STAFF: lec
CHANGES:
1) TR 7894; mgiconfig
2) TR 7943; report headings
3) TR 7508; chimp/dog

TAG: entrezgeneload-3-5-1-9
TAG: entrezgeneload-3-5-1-8
TAG: entrezgeneload-3-5-1-7
DATE: 10/16/2006
STAFF: lec
CHANGES:
1) TR 7894; mgiconfig
2) TR 7943; report headings
3) TR 7508; chimp/dog

TAG: entrezgeneload-3-5-1-6
DATE: 10/12/2006
STAFF: lec
CHANGES:
1) TR 7894; mgiconfig
2) TR 7943; report headings

TAG: entrezgeneload-3-5-1-5
DATE: 10/06/2006
STAFF: lec
CHANGES:
1) TR 7894; mgiconfig
2) TR 7943; report headings

TAG: entrezgeneload-3-5-1-4
DATE: 09/21/2006
STAFF: lec
CHANGES:
1) build 36
2) TR 7894; mgiconfig

TAG: entrezgeneload-3-5-1-3
TAG: entrezgeneload-3-5-1-2
DATE: 09/08/2006
STAFF: lec
CHANGES:
1) build 36

TAG: entrezgeneload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) build 36; merge

TAG: entrezgeneload-build36-2
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) TR 7891/EntrezGene files

TAG: entrezgeneload-build36-1
DATE: 07/27/2006
STAFF: lec
CHANGES:
1) build 36

TAG: entrezgeneload-build36-BP
DATE: 07/13/2006
STAFF: lec
CHANGES:
1) branch point tag for build 36

TAG: entrezgeneload-3-5-0-2
DATE: 07/01/2006
STAFF: lec
CHANGES:
1) mgiconfig merge

TAG: entrezgeneload-mgiconfig-11
TAG: entrezgeneload-mgiconfig-10
DATE: 06/29/2006
STAFF: lec
CHANGES: